--- a/KidKinder/KidKinder.csproj
+++ b/KidKinder/KidKinder.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\Components\_QuickPartial\" />
+  </ItemGroup>
+
 </Project>
