--- a/KidKinder/KidKinder.csproj
+++ b/KidKinder/KidKinder.csproj
@@ -30,7 +30,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="wwwroot\teacherImages\" />
   </ItemGroup>
 
 </Project>
