Gallery about to completed

--- a/KidKinder/KidKinder.csproj
+++ b/KidKinder/KidKinder.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="wwwroot\galleryImages\" />
     <Folder Include="wwwroot\teacherImages\" />
   </ItemGroup>
 
